--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+::-webkit-scrollbar {
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  padding: 2rem;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+span.highlight {
+  background-color: yellow;
+}
+
+img.medicine-image {
+  transition: 0.1s ease-in-out 0s;
+  max-width: 100px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+img.medicine-image:hover {
+  transition: 0.1s ease-in-out 0s;
+  transform: scale(1.2);
+}
+img.medicine-image-large {
+  width: 100%;
+}
+
+.sections p {
+  margin: 1rem 0;
+}
+.sections p:first-child {
+  margin-top: 0;
+}
+.sections table p {
+  margin: 0;
+}
+.sections ul,
+.sections ol {
+  list-style: inside;
+}
+.sections table {
+  border-collapse: collapse;
+  text-align: left;
+  width: 100%;
+}
+.sections table caption {
+  margin-bottom: 1rem;
+}
+.sections table td,
+.sections table th {
+  border: 1px solid var(--color-default);
+  text-align: left;
+  padding: 1rem;
+  font-size: 0.875em;
 }
